# Viewer

./: .coveragerc  .env.sample  .eslintrc.cjs  .gitignore  .pylintrc  .replit  .shellcheckrc  AGENTS.md  CLAUDE_TEST_INSTRUCTIONS.md  CODE_AUDIT_REFACTOR_RECOMMENDATIONS.md  CODE_AUDIT_REPORT.md  DATABASE_ENABLED_FIELD_ISSUE.md  DECOMPOSITION_STATUS.md  DECOMPOSITION_SUMMARY.md  FINAL_SESSION_REPORT.md  GATEWAY_REFACTORING_SUMMARY.md  GAUGE_SPEC_PLAN.md  PLAN_TO_RUN_TESTS.md  README.md  REFACTORING_BEFORE_AFTER.md  REFACTORING_SUMMARY.md  SESSION_CONTINUATION_SUMMARY.md  SESSION_SUMMARY.md  TEST_AUTHENTICATION.md  TEST_INDEX.md  TEST_INDEX.md.new  TEST_READINESS_REPORT.md  UNIT_TEST_VERIFICATION.md  ai_defaults.py  alias_definition.py  alias_matching.py  alias_routing.py  analytics.py  app.py  auth_providers.py  authorization.py  authorization_handler.py  bandit.yaml  boot_cid_importer.py  boot_image_diff.py  (+167 more)
.github/: copilot-instructions.md
api/: __init__.py  index.py
cids/: .gitignore  AAAAAA-0Tlzwtsh-ADsB7OExMuRDd1gdb3KA1Gsj43t7N1bXUdR3nA_z1xzt74tC5M1NEBoki_WMmp9Kt4tJpFQfirHlQg  AAAAAA-UkXq3eBIVvNg6YEQGURmbcldmvmYqeDYOqP_QW7RU3Pfcsrsi2bQ9te_vcCXYGtWo6CIgrzXLpW7UA0cZa-LtFg  AAAAAA-dSn8ipDWIZgexQlUOw4u8wof26YSig7bEUmGekMK0kL69PfhE2KYvA3MYEgW4_kuNMU0VBC2JIhOiFIViF_egZA  AAAAAA-pqKiWZe7d9fuxmVEHUm4D90cz-tn8Wra6ZqefP03BXjoRTgWZwuEjwskjHnFWpmG_6Oz4sPknLdTKg3y62CaLUA  AAAAAA0dq83fE9eIrSS9WRukPnedvlcMUiWVteNa_EBJyxZt5TBb8WSFtSw1F2HJ_hwvcWfKu8lQ4-eC1D68uq2W0tbFwA  AAAAAA1A2RuKIFcA9lWszVBBLuNscgMuSUnvPBsU1avIWTjgWcuFThc8_ejDjwIUb_dLtIvb0trljnuE4Wzl66Yu7lVN7Q  AAAAAAANZXhhbXBsZSB2YWx1ZQ  (+1011 more)
dev/: index.html  (+1 more)
(+2997 files in other folders)
