[project]
name = "repl-nix-workspace"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.12"
dependencies = [
    "email-validator>=2.2.0",
    "flask-dance>=7.1.0",
    "flask>=3.1.2",
    "flask-sqlalchemy>=3.1.1",
    "gunicorn>=23.0.0",
    "psycopg2-binary>=2.9.10",
    "flask-login>=0.6.3",
    "oauthlib>=3.3.1",
    "pyjwt>=2.10.1",
    "flask-wtf>=1.2.2",
    "wtforms>=3.2.1",
    "sqlalchemy>=2.0.43",
    "werkzeug>=3.1.3",
    "Markdown>=3.6",
    "Pygments>=2.17.2",
    "qrcode[pil]>=7.4.2",
    "glom>=23.3.0",
    "hypothesis>=6.124.1",
    "ruff>=0.1.0",
    "radon>=6.0.1",
    "mypy>=1.13.0",
    "pyppeteer>=1.0.2,<2.0.0",
    "pytest-testmon>=2.1.0",
]

[tool.radon]
# Analyse the repository root while skipping generated assets, front-end bundles,
# and the various acceptance-test harnesses.
paths = ["."]
exclude = [
    ".git",
    ".github",
    "docs",
    "env",
    "gauge",
    "gauge_stub",
    "node_modules",
    "static",
    "step_impl",
    "templates",
    "test",
    "test-gauge",
    "test-unit",
    "tests",
]
ignore = ["**/__init__.py"]
# The Radon job fails when any block is graded worse than this rank.  The
# threshold keeps the check strict enough to catch problematic code while still
# allowing legacy modules to pass after excluding the harness directories above.
fail_rank = "E"
# Limit the size of the HTML summary tables so the published report stays
# readable without truncating important findings.
report_top = 25
